--- a/index.html
+++ b/index.html
@@ -171,33 +171,37 @@
 					<h3 class="animated bounceInUp">2. Objectives</h3>
 				</section>
 
-				<section>
+				<section id="objectivesSection">
 					<div class="sectionIdentifier objectivesMark">
 						2. Objectives
 					</div>
-					<div class="leftTitle animated bounceInLeft">
-						<h4>2.1. General Objective</h4>
+					<div>
+						<div class="leftTitle animated bounceInLeft">
+							<h4>2.1. General Objective</h4>
+						</div>
+						<p id="generalObjective" class="fragment fade-right">
+							To <b>design a prototype</b> of a triage system for determining the <b>patient critical level</b> in <b>traffic accidents</b> emergency services by using <b>neural networks techniques</b>.
+						</p>
 					</div>
-					<p id="generalObjective" class="fragment fade-right">
-						To <b>design a prototype</b> of a triage system for determining the <b>patient critical level</b> in <b>traffic accidents</b> emergency services by using <b>neural networks techniques</b>.
-					</p>
-					<div class="leftTitle fragment fade-right">
-						<h4>2.2. Specific Objectives</h4>
+					<div>
+						<div class="leftTitle fragment fade-right">
+							<h4>2.2. Specific Objectives</h4>
+						</div>
+						<ul id="specificObjectives">
+							<li class="fragment fade-right">
+								To <b>define attributes</b> that determine the <b>patient condition</b>.
+							</li>
+							<li class="fragment fade-right">
+								To <b>design a neural network</b> architecture to <b>categorize patients</b> with traffic accidents according to their <b>level of urgency</b> of care.
+							</li>
+							<li class="fragment fade-right">
+								To <b>implement</b> the proposed approach using <b>adequate hardware and software</b>.
+							</li>
+							<li class="fragment fade-right">
+								To <b>measure the efficiency</b> achieved by the proposed approach in terms of <b>sensitivity, specificity, accuracy percentage</b> and <b>execution time</b>.
+							</li>
+						</ul>
 					</div>
-					<ul id="specificObjectives">
-						<li class="fragment fade-right">
-							To <b>define attributes</b> that determine the <b>patient condition</b>.
-						</li>
-						<li class="fragment fade-right">
-							To <b>design a neural network</b> architecture to <b>categorize patients</b> with traffic accidents according to their <b>level of urgency</b> of care.
-						</li>
-						<li class="fragment fade-right">
-							To <b>implement</b> the proposed approach using <b>adequate hardware and software</b>.
-						</li>
-						<li class="fragment fade-right">
-							To <b>measure the efficiency</b> achieved by the proposed approach in terms of <b>sensitivity, specificity, accuracy percentage</b> and <b>execution time</b>.
-						</li>
-					</ul>
 				</section>
 
 				<!-- Slide 5 -->
@@ -225,7 +229,7 @@
 						3. Theoretical Framework
 					</div>
 					<h4 class="animated bounceInDown">Manchester Triage Scale (MTS)</h4>
-					<table class="fragment fade">
+					<table class="animated fadeIn">
 						<thead>
 							<tr>
 								<th>Scale Category</th>
@@ -262,6 +266,7 @@
 						3. Theoretical Framework
 					</div>
 					<h4>Manchester Triage Scale (MTS)</h4>
+					<h5 class="text-left animated bounceInLeft">Reasons for Consultation or Presentations</h5>
 					<ul id="reasonsForConsultation">
 						<li class="fragment fade-up" data-fragment-index="1">
 							Asthma
@@ -317,8 +322,8 @@
 								</td>
 							</tr>
 							<tr>
-								<td>Manual approach without technical features and has low precision.</td>
-								<td>Automated process reducing classification time, requiring a training process to predict triage level.</td>
+								<td><b>Manual approach</b> without technical features and has low precision.</td>
+								<td><b>Automated process</b> reducing classification time, requiring a training process to predict triage level.</td>
 							</tr>
 						</tbody>
 					</table>
@@ -337,22 +342,31 @@
 					<img height="80%" src="lib/images/thesis_stages.png" alt="Thesis Stages" class="animated fadeIn">
 				</section>
 
-				<section>
+				<section class="methodologySection">
 					<div class="sectionIdentifier methodologyMark">
 						4. Methodology
 					</div>
 					<h4 class="animated bounceInDown">4.1.1. Data Collection</h4>
 					<h5 class="text-left animated bounceInLeft">Triage Scale</h5>
-					<p class="text-left fragment fade-up">Manchester Triage Scale</p>
+					<div class="d-flex justify-content-around align-items-center w-100 fragment fade-up">
+						<p>Manchester Triage Scale</p>
+						<img id="mtsLogo" src="lib/images/MTS_Logo.jpg" alt="Manchester Triage Scale">
+					</div>
 					<h5 class="text-left fragment fade-right mt-2">Dataset</h5>
-					<ul class="text-left">
-						<li class="fragment fade-up">28 discriminators based on MTS</li>
-						<li class="fragment fade-up">5 vital signs</li>
-						<li class="fragment fade-up">Age</li>
-						<li class="fragment fade-up">Gender</li>
-						<li class="fragment fade-up">Reason for consultation</li>
-						<li class="fragment fade-up">Triage level</li>
-					</ul>
+					<div id="datasetDescription">
+						<ul>
+							<li class="fragment fade-up">Data obtained at San Vicente de Paul hospital</li>
+							<li class="fragment fade-up">43 patients registered</li>
+							<li class="fragment fade-up">28 discriminators based on MTS</li>
+							<li class="fragment fade-up">5 vital signs</li>
+						</ul>
+						<ul>
+							<li class="fragment fade-up">Age</li>
+							<li class="fragment fade-up">Gender</li>
+							<li class="fragment fade-up">Reason for consultation</li>
+							<li class="fragment fade-up">Triage level</li>
+						</ul>
+					</div>
 				</section>
 
 				<section>
@@ -361,7 +375,7 @@
 					</div>
 					<h4 class="animated bounceInDown">4.1.2. Neural Network Model</h4>
 					<div class="imageContainer animated fadeIn" data-fragment-index="1">
-						<img src="lib/images/neural_network_model.png" alt="Neural Network Model">
+						<!-- <img src="lib/images/neural_network_model.png" alt="Neural Network Model"> -->
 						<span id="level1Percentage" class="fragment fade" data-fragment-index="2">0.08</span>
 						<span id="level2Percentage" class="fragment fade" data-fragment-index="2">0.02</span>
 						<span id="level3Percentage" class="fragment fade" data-fragment-index="2">0.16</span>
@@ -376,7 +390,7 @@
 						4. Methodology
 					</div>
 					<h4 class="animated bounceInDown">4.1.3. Hardware and Software Tools</h4>
-					<h5 class="text-left animated bounceInLeft">Tensorflow</h5>
+					<h5 class="text-left animated bounceInLeft">Training Framework: Tensorflow</h5>
 					<ul id="tensorflowCharacteristics">
 						<li class="fragment fade-right pros"><b>+</b> <b>High performance</b> and matching <b>the best</b> in the industry.</li>
 						<li class="fragment fade-right pros"><b>+</b> Excelent community support.</li>
@@ -427,7 +441,7 @@
 						4. Methodology
 					</div>
 					<h4 class="topText mt-2">4.1.3. Hardware and Software Tools</h4>
-					<h5 class="text-left pl-7 animated bounceInLeft">Flutter</h5>
+					<h5 class="text-left pl-7 animated bounceInLeft">Mobile Application Framework: Flutter</h5>
 					<ul id="flutterCharacteristics">
 						<li class="fragment fade-right">Uses Dart</li>
 						<li class="fragment fade-right">Develop for iOS and Android from a <b>single codebase</b>.</li>
@@ -853,14 +867,14 @@
 					</div>
 				</section>
 
-				<section>
+				<!-- <section>
 					<div class="sectionIdentifier resultsMark">
 						6. Results and Discussion
 					</div>
 					<h4>6.1. Neural Network Experiments</h4>
 					<h5 class="text-left animated bounceInLeft">Experiment 3: Execution Time</h5>
 					<div class="chartContainer">
-						<canvas height="130%" data-chart="line" data-chart-src="lib/csv/experiment3.csv">
+						<canvas height="130%" data-chart="line" data-chart-src="lib/csv/experiment3.csv"> -->
 						<!--
 						{
 							"data": {
@@ -888,9 +902,9 @@
 							}
 						}
 						-->
-						</canvas>
+						<!-- </canvas>
 					</div>
-				</section>
+				</section> -->
 
 				<section id="additionalResultsSection">
 					<div class="sectionIdentifier resultsMark">
